--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: fastapi-app
-  namespace: fastapi
+  name: flask-app
+  namespace: flask
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: fastapi
+      app: flask
   template:
     metadata:
       labels:
-        app: fastapi
+        app: flask
     spec:
       containers:
-        - name: fastapi
+        - name: flask
           image: juanarillo/cicd_practica:latest
           ports:
             - containerPort: 8000
