--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -1,20 +1,20 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: fastapi-ingress
-  namespace: fastapi
+  name: flask-ingress
+  namespace: flask
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
-    - host: fastapi.local
+    - host: flask.local
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: fastapi-service
+                name: flask-service
                 port:
                   number: 80
