--- a/k8s/redis-deployment.yml
+++ b/k8s/redis-deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis
-  namespace: fastapi
+  namespace: flask
 spec:
   replicas: 1
   selector:
