--- a/k8s/redis-service.yml
+++ b/k8s/redis-service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis
-  namespace: fastapi
+  namespace: flask
 spec:
   selector:
     app: redis
