--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: fastapi-service
-  namespace: fastapi
+  name: flask-service
+  namespace: flask
 spec:
   type: NodePort
   selector:
-    app: fastapi
+    app: flask
   ports:
     - protocol: TCP
       port: 80
